dhall/tests/type-errors/unit/ListLiteralEmptyNotType.txt
Type error: Unhandled error: error: function annot mismatch
 --> <current file>:1:5
  |
1 | [] : List Type
  |      ^^^^^^^^^ function annot mismatch
  |      ---- help: this expects an argument of type: Type
  |           ---- help: but this has type: Kind
  |
